Stuck batch problem fix

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "seed:pythonRules": "ts-node-dev --transpile-only src/scripts/seedPythonRules.ts",
     "export:pythonRules": "ts-node-dev --transpile-only src/scripts/exportRulesToPython.ts",
     "sync:profiles": "ts-node-dev --transpile-only src/scripts/syncProfiles.ts",
+    "sync:ninja": "ts-node-dev --transpile-only src/scripts/syncNinjaKeys.ts",
+    "debug:validation": "ts-node-dev --transpile-only src/scripts/debugValidation.ts",
+    "clean:filter": "ts-node-dev --transpile-only src/scripts/clearFilterQueue.ts",
+    "unstick:batch": "ts-node-dev --transpile-only src/scripts/unstickBatch.ts",
     "test:ninja": "ts-node-dev --transpile-only src/scripts/testNinja.ts",
     "dev": "npm run api",
     "build": "tsc -p tsconfig.json",
